manifests/training-engine/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-engine-frontend
  namespace: training-engine
  labels:
    app.kubernetes.io/name: training-engine-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: training-engine-frontend
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: training-engine-frontend
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
        - name: frontend
          image: ghcr.io/christ0ph82/training-engine-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
