manifests/training-engine/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-engine-postgresql
  namespace: training-engine
  labels:
    app.kubernetes.io/name: postgresql
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
